Fix API Swagger documentation
